新增縣市選取後出現自行車道選項、修復無法找到所在位置 bug

--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -14,7 +14,9 @@
         />
     </head>
     <body>
-        <select class="form-select" id="bikeRoute" aria-label="選擇自行車道下拉選單"> </select>
+        <select class="form-select-city" id="bikeCity" aria-label="縣市"> </select>
+        <select class="form-select" id="bikeRoute" aria-label="自行車道"> </select>
+        <!-- <button id="routeBtn">Go</button> -->
         <p><button id="testClick">Show my location</button></p>
         <div id="out"></div>
         <div id="map"></div>
