--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -1,68 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>LULU</title>
-        <!-- leaflet css-->
-        <link
-            rel="stylesheet"
-            href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
-            integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
-            crossorigin=""
-        />
-        <!-- fontawesome -->
-        <link
-            rel="stylesheet"
-            href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
-            integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm"
-            crossorigin="anonymous"
-        />
-        <!-- Google Font -->
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap"
-            rel="stylesheet"
-        />
-        <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/1.5.2/css/ionicons.min.css" />
-    </head>
-    <body>
-        <div class="container">
-            <div class="sideBar">
-                <div class="logoBox">
-                    <img class="logoBox-logo" src="./src/image/lululogo.png" alt="嚕路Logo" />
-                    <span class="title1">嚕路</span><span class="title2">自行車道地圖資訊整合網</span>
-                </div>
-                <div class="select-group">
-                    <select class="form-select-city" id="bikeCity" aria-label="縣市"> </select>
-                    <select class="form-select" id="bikeRoute" aria-label="自行車道"> </select>
+
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>LULU</title>
+    <!-- leaflet css-->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin="" />
+    <!-- fontawesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous" />
+    <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/1.5.2/css/ionicons.min.css" />
+</head>
+
+<body>
+    <div class="container">
+        <div class="sideBar">
+            <div class="logoBox">
+                <img class="logoBox-logo" src="./src/image/lululogo.png" alt="嚕路Logo" />
+                <span class="title1">嚕路</span><span class="title2">自行車道地圖資訊整合網</span>
+            </div>
+            <div class="route-cards">
+                <div class="route-card">
+                    <span class="route-title">臺中市大安濱海自行車道</span>
+                    <span class="route-length">全長<span class="cyclingLength">26</span>公里</span>
+                    <div class="routeS2E">
+                        <span class="routeStart">起點</br><span class="routeStartPlace">頂安海堤安心橋</span></span><span class="routeEnd">終點</br><span class="routeEndPlace">台61縣西部濱海公路南下144公里</span></span>
+                    </div>
                 </div>
             </div>
-            <div class="mapdiv">
-                <button id="testClick" class="myMOUSE"><i class="fas fa-location-arrow"></i></button>
-                <div id="map"></div>
+            <div class="station-cards">
+                <div class="station-card">
+                    <span class="station-title">臺中市大安濱海自行車道</span>
+                    <span class="youbike">Youbike<span class="youbikeVersion">2</span>.0</span>
+                    <div class="routeS2E">
+                        <span class="stationBorrowText">可租借</br><span class="borrowNumbers">14</span></span><span class="stationCapacityText">可歸還</br><span class="capacityNumbers">0</span></span>
+                    </div>
+                </div>
+            </div>
+            <div class="select-group">
+                <select class="form-select-city" id="bikeCity" aria-label="縣市"> </select>
+                <select class="form-select" id="bikeRoute" aria-label="自行車道"> </select>
             </div>
         </div>
-        <div class="box"></div>
+        <div class="mapdiv">
+            <button id="testClick" class="myMOUSE"><i class="fas fa-location-arrow"></i></button>
+            <div id="map"></div>
+        </div>
+    </div>
 
-        <!-- leaflet js-->
-        <script
-            src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
-            integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
-            crossorigin=""
-        ></script>
-        <!-- axios -->
-        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-        <!-- jsSHA -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jsSHA/3.2.0/sha.js"></script>
-        <!-- wicket -->
-        <script
-            src="https://cdnjs.cloudflare.com/ajax/libs/wicket/1.3.8/wicket.min.js"
-            integrity="sha512-aaiN+QIXD0N9Id865vSDEfttZJV9v8ZGh7jXMnYI2zbZhkSYOulS4IH0u4pC61/KXT20UedYzL5xi5siIg6mlw=="
-            crossorigin="anonymous"
-            referrerpolicy="no-referrer"
-        ></script>
-    </body>
+    <!-- leaflet js-->
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
+    <!-- axios -->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <!-- jsSHA -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jsSHA/3.2.0/sha.js"></script>
+    <!-- wicket -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/wicket/1.3.8/wicket.min.js" integrity="sha512-aaiN+QIXD0N9Id865vSDEfttZJV9v8ZGh7jXMnYI2zbZhkSYOulS4IH0u4pC61/KXT20UedYzL5xi5siIg6mlw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+</body>
+
 </html>
