新增附近餐廳渲染卡片，但無法成功渲染

--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -48,13 +48,23 @@
                     </div>
 
                     <div id="food-cards">
-                        <!-- <div id="station-card">
-                    <span class="station-title">臺中市大安濱海自行車道</span>
-                    <span class="youbike">Youbike<span class="youbikeVersion">2</span>.0</span>
-                    <div class="routeS2E">
-                        <span class="stationBorrowText">可租借</br><span class="borrowNumbers">14</span></span><span class="stationCapacityText">可歸還</br><span class="capacityNumbers">0</span></span>
-                    </div>
-                </div> -->
+                        <!-- <div id="food-card">
+                            <img
+                                class="food-image"
+                                src="https://newtaipei.travel/content/images/shops/13578/640x480_1249f8b640600000493c.jpg"
+                                alt="八里亭麵館店內一景"
+                            />
+                            <span class="food-title">八里亭麵館</span>
+                            <span class="food-adress"
+                                >新北市234永和區中山路一段293號1樓<a
+                                    href="https://www.google.com.tw/maps/place/八里亭麵館"
+                                    target="_blank"
+                                    ><i class="fas fa-map-pin"></i></a></span
+                            ><span class="food-phone"
+                                >886-2-29291108<a href="tel:555-555-5555"><i class="fas fa-phone"></i></a
+                            ></span>
+                            <span class="food-openTime">11:00-14:00 、17:00-20:00(每週二公休)</span>
+                        </div> -->
                     </div>
                 </div>
 
