調整左邊資訊欄位樣式

--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -46,7 +46,7 @@
                     </div>
                 </div> -->
                     </div>
-
+                    <div id="noFood"></div>
                     <div id="food-cards">
                         <!-- <div id="food-card">
                             <img
