完成 mobile device CSS，補上 Copyright 資訊

--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -75,8 +75,9 @@
             </div>
             <div class="mapdiv">
                 <button id="testClick" class="myMOUSE"><i class="fas fa-location-arrow"></i></button>
-                <div id="map"></div>
+                <div id="map" tap="{false}"></div>
             </div>
+            <div class="footer">LULU© Code: 珊迪 Design: Stephanie Chang</div>
         </div>
 
         <!-- leaflet js-->
