調整選單初始化狀態

--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -33,7 +33,7 @@
         <div class="container">
             <div class="sideBar">
                 <div class="logoBox">
-                    <img class="logoBox-logo" src="./src/image/lululogo.png" alt="嚕路Logo" />
+                    ><img class="logoBox-logo" src="./src/image/lululogo.png" alt="嚕路Logo" />
                     <span class="title1">嚕路</span><span class="title2">自行車道週邊美食整合網</span>
                 </div>
                 <div id="cards-div">
