--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>LULU</title>
+        <link rel="icon" href="src/image/lululogo.ico" type="image" />
         <!-- leaflet css-->
         <link
             rel="stylesheet"
@@ -33,7 +34,7 @@
         <div class="container">
             <div class="sideBar">
                 <div class="logoBox">
-                    ><img class="logoBox-logo" src="./src/image/lululogo.png" alt="嚕路Logo" />
+                    <img class="logoBox-logo" src="./src/image/lululogo.png" alt="嚕路Logo" />
                     <span class="title1">嚕路</span><span class="title2">自行車道週邊美食整合網</span>
                 </div>
                 <div id="cards-div">
