--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -3,16 +3,11 @@
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <title>LULU</title>
         <link rel="icon" href="src/image/lululogo.ico" type="image" />
         <!-- leaflet css-->
-        <link
-            rel="stylesheet"
-            href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
-            integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
-            crossorigin=""
-        />
+        <link rel="stylesheet" href="https://npmcdn.com/leaflet@0.7.7/dist/leaflet.css" />
         <!-- fontawesome -->
         <link
             rel="stylesheet"
@@ -37,19 +32,24 @@
                     <img class="logoBox-logo" src="./src/image/lululogo.png" alt="嚕路Logo" />
                     <span class="title1">嚕路</span><span class="title2">自行車道週邊美食整合網</span>
                 </div>
-                <div id="cards-div">
-                    <div id="route-cards">
-                        <!-- <div class="route-card">
+                <div class="select-group">
+                    <select class="form-select-city" id="bikeCity" aria-label="縣市"> </select>
+                    <select class="form-select" id="bikeRoute" aria-label="自行車道"> </select>
+                </div>
+            </div>
+            <div id="cards-div">
+                <div id="route-cards">
+                    <!-- <div class="route-card">
                     <span class="route-title">臺中市大安濱海自行車道</span>
                     <span class="route-length">全長<span class="cyclingLength">26</span>公里</span>
                     <div class="routeS2E">
                         <span class="routeStart">起點</br><span class="routeStartPlace">頂安海堤安心橋</span></span><span class="routeEnd">終點</br><span class="routeEndPlace">台61縣西部濱海公路南下144公里</span></span>
                     </div>
                 </div> -->
-                    </div>
-                    <div id="noFood"></div>
-                    <div id="food-cards">
-                        <!-- <div id="food-card">
+                </div>
+                <div id="noFood"></div>
+                <div id="food-cards">
+                    <!-- <div id="food-card">
                             <img
                                 class="food-image"
                                 src="https://newtaipei.travel/content/images/shops/13578/640x480_1249f8b640600000493c.jpg"
@@ -66,14 +66,9 @@
                             ></span>
                             <span class="food-openTime">11:00-14:00 、17:00-20:00(每週二公休)</span>
                         </div> -->
-                    </div>
-                </div>
-
-                <div class="select-group">
-                    <select class="form-select-city" id="bikeCity" aria-label="縣市"> </select>
-                    <select class="form-select" id="bikeRoute" aria-label="自行車道"> </select>
                 </div>
             </div>
+
             <div class="mapdiv">
                 <button id="testClick" class="myMOUSE"><i class="fas fa-location-arrow"></i></button>
                 <div id="map" tap="{false}"></div>
@@ -82,11 +77,7 @@
         </div>
 
         <!-- leaflet js-->
-        <script
-            src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
-            integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
-            crossorigin=""
-        ></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.6.0/leaflet.js"></script>
         <!-- axios -->
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
         <!-- jsSHA -->
