--- a/index.html
+++ b/index.html
@@ -89,5 +89,5 @@
             crossorigin="anonymous"
             referrerpolicy="no-referrer"
         ></script>
-    <script type="text/javascript" src="/js/index.js"></script></body>
+    <script type="text/javascript" src="./js/index.js"></script></body>
 </html>
